--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -20,6 +20,8 @@ include::logHomebridge.asciidoc[]
 
 include::exemple_config_TG.asciidoc[]
 
+include::plugin-specifique.asciidoc[]
+
 == Changelog
 
 include::changelog.asciidoc[]
