--- a/doc/fr_FR/configurationHomebridgeTypeGenerique.asciidoc
+++ b/doc/fr_FR/configurationHomebridgeTypeGenerique.asciidoc
@@ -42,7 +42,7 @@ autre que 0 = Allumé
 
 (en fonction du min-max de Action/Lumière Température Couleur)
 
-
+(Eve Seulement)
 | Action/Lumière Température Couleur| Si Info/Lumière Température Couleur | Réf. vers Info/Lumière Température Couleur
 
 (Eve Seulement)
