--- a/doc/fr_FR/TroubleshootingHomebridge.asciidoc
+++ b/doc/fr_FR/TroubleshootingHomebridge.asciidoc
@@ -1,9 +1,21 @@
 === Aide Homebridge
 
+==== Support
+
+*Merci de passer par le forum, de créer un sujet par demande et de lire les autres sujets s'ils ressemblent au votre (ceux créés après la sortie de ce plugin, c'est logique :-)) Pour être certain que vous avez lu ceci jusqu'au bout précédez votre titre de sujet par [HB-VotreNom] sinon le sujet sera effacé sans réponse.*
+
+==== Point important
+
 [IMPORTANT]
-Les références vers l'état dans les actions est primordiale !! sinon pas de lien entre l'état et ses actions possibles.
+Les références vers l'état dans les actions sont primordiales !! Sinon pas de lien entre l'état et ses actions possibles.
 
 image::../images/reference-etat.png[]
+
+==== FAQ
+
+*-> Le pont HomeBridge n'apparait pas dans l'application Maison !*
+
+TIP: Vérifiez que vous êtes connecté au même sous réseau le pont HomeBridge que les fonctions Igmp snooping ou dns multicast sont activées sur votre box, routeur ou switch.
 
 *-> Je n'arrive pas à inclure Jeedom dans HomeKit !*
 
