--- a/doc/fr_FR/plugin-specifique.asciidoc
+++ b/doc/fr_FR/plugin-specifique.asciidoc
@@ -2,6 +2,10 @@
 
 ==== Plugin thermostat
 
+[IMPORTANT]
+La fonctionnalité du thermostat dans HomeBridge est compatible uniquement (pour l'intant) avec le plugin jeedom thermostat. Pour configurer le plugin thermostat, il faut se référer à la http://https://jeedom.github.io/documentation/plugins/thermostat/fr_FR/index.html[documentation du plugin.].
+
+
 ===== Configuration
 
 Dans HomeKit, le thermostat est géré suivant 4 modes : "Eteint", "chauffer" "Limatisation" et "Automatique". 
@@ -14,7 +18,7 @@ image::../images/thermostat1.png[]
 
 * *Mode* : Sélection du mode du thermostat
 
-* *Protection enfants* : Permet de verouiller les réglages du thermostat
+* *Protection enfants* : Permet de verrouiller les réglages du thermostat
 
 * *Statut* : Indique si le chauffage ou la climatisation émet ou pas de la chaleur ou du froid.
 
@@ -24,7 +28,7 @@ image::../images/thermostat.png[]
 
 ===== Utilisation
 
-Seuls les modes "CHAUF" et "CLIM" fonctionneront. Les Modes "ETEINT" et "AUTO" sont non fonctionnelles.
+Seuls les modes "CHAUF", "CLIM" et "ETEINT" fonctionneront. Le Mode "AUTO" est non fonctionnelle. Pour mettre à l'arrêt le système de chauffage ou climatisation, il faut sélectionner le mode "ETEINT".
 
 [underline]#Mise en route du chauffage#
 
@@ -34,16 +38,39 @@ image::../images/chauffe.png[]
 
 La température cible passe automatique à la température de consigne réglée dans le plugin thermostat.
 
-Le mode passe en "chauffage". Cela ne veut pas dire que le radiateur émet de la chaleur. C'est juste que le système de chauffage est route. Le statut indique si le radiateur emet de la chaleur.
+Le mode passe en "chauffage". Cela ne veut pas dire que le radiateur émet de la chaleur. C'est juste que le système de chauffage est route. Le statut indique si le radiateur émet de la chaleur.
 
 image::../images/statut.png[]
 
 *Statut arrêté" : Le radiateur n'émet pas de chaleur.
 
-*Statut achauffage" : Le radiateur émet de chaleur.
+*Statut chauffage" : Le radiateur émet de chaleur.
 
+Il est également possible de régler une température de consigne directement depuis l'application Eve ou via Siri.
 
+image::../images/sirichauff.png[]
 
-* *CLIM* : Active le mode du plugin thermostat du plugin jeedom pour la partie climatisation.
+Le chauffage passe en mode manuel.
 
-Il également possible de régler manuelement la température de consigne. Dans ce cas, 
+image::../images/forcechauff.png[]
+
+Le mode passe en "Désactivé", c'est normal. Dans certain cas, il peut rester dans la position où il était avant la demande de changement de la température de consigne.
+
+La température de consigne passe bien à la valeur demandée. Si la température ambiante est infèrieure à la température de consigne, le chauffage se mettra en route. Le statut passera donc en "Chauffage".
+
+[underline]#Mise en route de la climatisation#
+
+Le fonctionnement de la climatisation est indentique au fonctionnement du chauffage.
+
+En cliquant sur "CLIM", on active le mode de climatisation réglé dans le plugin thermostat.
+
+image::../images/clim.png[]
+
+On peut modifier la température de consigne.
+
+image::../images/siriclim.png[]
+
+Le fonctionnement de la climatisation passe en mode manuel.
+
+image::../images/climforce.png[]
+
