--- a/doc/fr_FR/exemple_config_camera.asciidoc
+++ b/doc/fr_FR/exemple_config_camera.asciidoc
@@ -94,7 +94,7 @@ Remplacer les valeurs xxx.xxx.xxx.xxx par l'adresse IP de la caméra, login par 
 
 Remplacer les valeurs xxx.xxx.xxx.xxx par l'adresse IP de la caméra, login par le login de connexion à la caméra et password par le mot de passe de connexion à la caméra.
 
-Foscam FI9803 V3
+==== Foscam FI9803 V3
 
 [source,]
 ----
