--- a/doc/fr_FR/presentationHomebridge.asciidoc
+++ b/doc/fr_FR/presentationHomebridge.asciidoc
@@ -41,6 +41,6 @@ L'iPad et l'AppleTV (et bientôt le HomePod) peuvent servir de concentrateur. Po
 [TIP]
 *HomeKit est le nom officiel du protocole développé par Apple. Homebridge est son équivalent Open Source développé par nfarina. Ce dernier a étendu le projet HAP-NodeJS qui est le moteur d'Homebridge.*
 
-===  Type d'accessoire compatible avec homebridge
+===  Type d'accessoire compatible avec HomeKit (on les ajoutera peu à peu à HomeBridge)
 
 image::../images/acchb.jpg[]
