--- a/doc/fr_FR/TroubleshootingHomebridge.asciidoc
+++ b/doc/fr_FR/TroubleshootingHomebridge.asciidoc
@@ -2,7 +2,7 @@
 
 ==== Support
 
-*Merci de passer par le forum, de créer un sujet par demande et de lire les autres sujets s'ils ressemblent au votre (ceux créés après la sortie de ce plugin, c'est logique :-)) Pour être certain que vous avez lu ceci jusqu'au bout précédez votre titre de sujet par [HB-VotreNom] sinon le sujet sera effacé sans réponse.*
+*Merci de passer par le forum, de créer *un* sujet par demande et de lire les autres sujets s'ils ressemblent au votre (ceux créés après la sortie de ce plugin, c'est logique :-))*
 
 ==== Point important
 
@@ -15,7 +15,7 @@ image::../images/reference-etat.png[]
 
 *-> Le pont HomeBridge n'apparait pas dans l'application Maison !*
 
-TIP: Vérifiez que vous êtes connecté au même sous réseau le pont HomeBridge que les fonctions Igmp snooping ou dns multicast sont activées sur votre box, routeur ou switch.
+TIP: Vérifiez que vous êtes connecté au même sous réseau le pont HomeBridge et que les fonctions Igmp snooping ou dns multicast sont activées sur votre box, routeur ou switch. Le protocole HomeKit n'est pas routable.
 
 *-> Je n'arrive pas à inclure Jeedom dans HomeKit !*
 
@@ -39,9 +39,9 @@ TIP: Vérifiez que la case "Envoyer à Homebridge" est cochée dans la configura
 
 *-> La case "Envoyer à Homebridge" est bien cochée mais mon équipement n'apparait toujours pas !*
 
-TIP: Vérifiez dans la configuration de votre équipement que celui-ci est activé et visible.
+TIP: Vérifiez dans la configuration de votre équipement que celui-ci est activé, et dans une pièce.
 
-TIP: Vérifiez que les types génériques sont bien configurés et que la commande ou l'info est visible. Chaque équipement envoyé à Homebridge doit avoir au moins un type générique "Etat".
+TIP: Vérifiez que les types génériques sont bien configurés. Chaque équipement envoyé à Homebridge doit avoir au moins un type générique "Etat".
 
 image::../images/ypegelumi.png[]
 
@@ -51,7 +51,7 @@ TIP: Il faut bien mettre à jour le plugin App Mobile, puis dans la configuratio
 
 *-> J'ai bien le retour d'état d'un équipement mais impossible de le piloter !*
 
-TIP: Vérifiez que les types génériques sont bien configurés. Il doit y avoir une cohérence entre les types. Si vous avez le type "Info Lumière Etat", vérifiez que les actions sont de types "Action / Lumière Bouton On" etc...
+TIP: Vérifiez que les types génériques sont bien configurés. Il doit y avoir une cohérence entre les types. Si vous avez le type "Info Lumière Etat", vérifiez que les actions sont de types "Action / Lumière Bouton On" etc... Voir aussi la référence à l'état (le point important ci-dessus)
 
 *-> Le message "sans réponse" apparait dans l'application Maison ou Eve*
 
